feat: heartbeat migration from nethcti-server to middleware
