# main.go
@@ -224,6 +224,9 @@ func createRouter() *gin.Engine {
 		// Voicemail
 		api.GET("/voicemail/list/:id", methods.ListVoicemailByID)
 
+		// NethLink heartbeat
+		api.POST("/user/nethlink", methods.NethlinkHeartbeat)
+
 		// Logout
 		api.POST("/logout", middleware.BodyLimit(1<<10), middleware.InstanceJWT().LogoutHandler)
 	}
